--- a/jeecmsv9.3-src/src/main/webapp/WEB-INF/config/jdbc.properties
+++ b/jeecmsv9.3-src/src/main/webapp/WEB-INF/config/jdbc.properties
@@ -1,8 +1,8 @@
 #mysql\u914d\u7f6e
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/v9_f?characterEncoding=UTF-8
+jdbc.url=jdbc:mysql://47.101.162.97:3306/v9_f?characterEncoding=UTF-8
 jdbc.username=root
-jdbc.password=password
+jdbc.password=123456
 
 hibernate.db=mysql
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
